Add empty home screen with functional hymn number picker

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,4 +18,9 @@
 
     <style name="BaseTheme" parent="Theme.MaterialComponents.NoActionBar" />
 
+    <style name="BaseBottomSheetDialog" parent="@style/Theme.MaterialComponents.BottomSheetDialog">
+        <item name="android:windowIsFloating">false</item>
+        <item name="bottomSheetStyle">@style/BottomSheet</item>
+    </style>
+
 </resources>
