--- a/app/src/main/res/drawable/bg_hymnal_icon.xml
+++ b/app/src/main/res/drawable/bg_hymnal_icon.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2018. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,8 +16,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:topLeftRadius="@dimen/bottom_sheet_corner_radius"
-        android:topRightRadius="@dimen/bottom_sheet_corner_radius" />
-    <solid android:color="@color/window_background" />
+    <corners android:radius="@dimen/spacing_normal" />
+
+    <solid android:color="@color/accent" />
+
 </shape>
