--- a/app/src/main/res/layout/fragment_picker.xml
+++ b/app/src/main/res/layout/fragment_picker.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +29,7 @@
         android:fontFamily="@font/sans_bold"
         android:gravity="center"
         android:maxLength="3"
-        android:textColor="#212121"
+        android:textColor="?android:textColorPrimary"
         android:textSize="50sp"
         tools:text="900" />
 
@@ -30,7 +46,7 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:fontFamily="@font/sans_bold"
             android:text="1"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -41,7 +57,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="2"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -52,7 +68,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="3"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
     </LinearLayout>
 
@@ -68,7 +84,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="4"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -79,7 +95,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="5"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -90,7 +106,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="6"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
     </LinearLayout>
 
@@ -106,7 +122,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="7"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -117,7 +133,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="8"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
@@ -128,7 +144,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="9"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
     </LinearLayout>
 
@@ -153,7 +169,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/sans_bold"
             android:text="0"
-            android:textColor="#212121"
+            android:textColor="?android:textColorPrimary"
             android:textSize="40sp" />
 
         <android.support.design.button.MaterialButton
