Implement listing hymnals in navigation view  - Introduced coroutines  - Created Room database to save local hymnals

--- a/app/src/main/res/layout/hymnal_item.xml
+++ b/app/src/main/res/layout/hymnal_item.xml
@@ -38,7 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/spacing_medium"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/contentView">
 
         <TextView
             android:id="@+id/name"
