--- a/app/src/main/res/drawable-night/page_margin.xml
+++ b/app/src/main/res/drawable-night/page_margin.xml
@@ -15,14 +15,11 @@
   ~ limitations under the License.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent">
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/switchTheme"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical" />
-
-</FrameLayout>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <gradient
+        android:angle="90"
+        android:endColor="#424242"
+        android:startColor="#212121"
+        android:centerColor="#303030" />
+</shape>
