--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~       http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
+
+    <include layout="@layout/content_home" />
 
     <android.support.design.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
@@ -16,7 +34,7 @@
         app:fabAlignmentMode="center"
         app:hideOnScroll="true"
         app:navigationIcon="@drawable/ic_menu"
-        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>
+        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -25,6 +43,6 @@
         app:fabSize="normal"
         app:layout_anchor="@id/bottomAppBar"
         app:layout_behavior="com.tinashe.christInSong.ui.custom.FloatingActionBehaviour"
-        app:srcCompat="@drawable/round_dialpad"  />
+        app:srcCompat="@drawable/round_dialpad" />
 
 </android.support.design.widget.CoordinatorLayout>
