--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,9 +25,10 @@
     <dimen name="spacing_micro">4dp</dimen>
     <dimen name="spacing_normal">8dp</dimen>
     <dimen name="spacing_list">12dp</dimen>
-    <dimen name="spacing_medium">12dp</dimen>
+    <dimen name="spacing_medium">16dp</dimen>
     <dimen name="spacing_large">24dp</dimen>
     <dimen name="spacing_extra_large">32dp</dimen>
+    <dimen name="spacing_huge">64dp</dimen>
 
     <dimen name="text_size_xsmall">11sp</dimen>
     <dimen name="text_size_small">13sp</dimen>
