update app theme

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+  ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -25,4 +25,10 @@
     <color name="divider">#757575</color>
 
     <color name="card_background">#424242</color>
+
+    <color name="color_on_secondary">@android:color/black</color>
+
+    <color name="brand_navigation_view">#27282D</color>
+
+    <color name="brand_navigation">#8027282D</color>
 </resources>
