--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+  ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,11 +16,18 @@
 
 <resources>
 
-    <style name="BaseTheme" parent="Theme.MaterialComponents.NoActionBar" />
-
     <style name="BaseBottomSheetDialog" parent="@style/Theme.MaterialComponents.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
         <item name="bottomSheetStyle">@style/BottomSheet</item>
+    </style>
+
+    <style name="Theme.Hymnal" parent="BaseTheme">
+        <item name="colorPrimary">@color/window_background</item>
+        <item name="colorPrimaryDark">@color/primary</item>
+        <item name="android:statusBarColor">@color/window_background</item>
+        <item name="colorAccent">@color/primary</item>
+        <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:navigationBarColor">@color/brand_navigation</item>
     </style>
 
 </resources>
