--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+  ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -28,4 +28,10 @@
     <color name="divider">#e0e0e0</color>
 
     <color name="scrim">#99323232</color>
+
+    <color name="white">#fff</color>
+    <color name="color_on_secondary">@color/white</color>
+
+    <color name="brand_navigation">#80FFFFFF</color>
+    <color name="brand_navigation_view">#FFFFFF</color>
 </resources>
