--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (c) 2018. Tinashe Mzondiwa.
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -16,5 +15,7 @@
   -->
 
 <resources>
-    <bool name="is_light_nav">true</bool>
+    <array name="preloaded_fonts" translatable="false">
+        <item>@font/google_sans</item>
+    </array>
 </resources>
