--- a/app/src/main/res/drawable/ic_book.xml
+++ b/app/src/main/res/drawable/ic_book.xml
@@ -14,17 +14,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">ChristInSong</string>
-
-    <string name="blank"/>
-    <string name="book">Book</string>
-    <string name="donate">Donate</string>
-    <string name="library">Library</string>
-    <string name="menu">Menu</string>
-    <string name="night_mode">Night Mode</string>
-    <string name="profile">Profile</string>
-    <string name="search">Search</string>
-    <string name="settings">Settings</string>
-    <string name="help_feedback">Help &amp; Feedback</string>
-</resources>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#000"
+        android:pathData="M18,2H6c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2zM6,4h5v8l-2.5,-1.5L6,12V4z" />
+</vector>
