--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,31 +18,36 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/coordinator"
     android:layout_height="match_parent">
 
-    <include layout="@layout/content_home" />
-
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
-        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_gravity="bottom"
-        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
-        app:backgroundTint="@color/primary"
-        app:buttonGravity="bottom|top"
-        app:fabAlignmentMode="center"
-        app:hideOnScroll="true"
-        app:navigationIcon="@drawable/ic_menu"
-        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+        android:layout_height="match_parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@color/brand_navigation_view"
+        app:backgroundTint="@color/brand_navigation_view"
+        app:elevation="@dimen/spacing_normal"
+        app:itemIconTint="@color/nav_tint_color"
+        app:itemTextColor="@color/nav_tint_color"
+        app:labelVisibilityMode="selected"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
+        app:menu="@menu/menu_home" />
+
+
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:fabSize="normal"
         app:layout_anchor="@id/bottomAppBar"
         app:layout_behavior="app.tinashe.hymnal.ui.custom.FloatingActionBehaviour"
-        app:srcCompat="@drawable/round_dialpad" />
+        app:srcCompat="@drawable/round_dialpad" />-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
