--- a/app/src/main/res/drawable/bg_on_surface.xml
+++ b/app/src/main/res/drawable/bg_on_surface.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,18 +14,16 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">Hymnal</string>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@color/color_on_secondary" />
 
-    <string name="blank"/>
-    <string name="book">Book</string>
-    <string name="donate">Donate</string>
-    <string name="hymnal">Hymnal</string>
-    <string name="library">Library</string>
-    <string name="menu">Menu</string>
-    <string name="night_mode">Night Mode</string>
-    <string name="profile">Profile</string>
-    <string name="search">Search</string>
-    <string name="settings">Settings</string>
-    <string name="help_feedback">Help &amp; Feedback</string>
-</resources>
+    <corners android:radius="6dp" />
+
+    <padding
+        android:bottom="4dp"
+        android:left="6dp"
+        android:right="6dp"
+        android:top="4dp" />
+
+</shape>
