--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2019. Tinashe Mzondiwa.
   ~
@@ -14,18 +15,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="app_name">Hymnal</string>
-
-    <string name="blank"/>
-    <string name="book">Book</string>
-    <string name="donate">Donate</string>
-    <string name="hymnal">Hymnal</string>
-    <string name="library">Library</string>
-    <string name="menu">Menu</string>
-    <string name="night_mode">Night Mode</string>
-    <string name="profile">Profile</string>
-    <string name="search">Search</string>
-    <string name="settings">Settings</string>
-    <string name="help_feedback">Help &amp; Feedback</string>
-</resources>
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/spacing_huge"
+    android:paddingTop="@dimen/spacing_huge"
+    android:scrollbarStyle="outsideOverlay"
+    android:scrollbars="vertical" />
