--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -27,13 +27,7 @@
     <item
         android:id="@+id/nav.read"
         android:icon="@drawable/ic_book"
-        android:title="@string/book"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/nav.search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/search"
+        android:title="@string/hymnal"
         app:showAsAction="ifRoom" />
 
     <item
