--- a/app/src/main/res/layout/hymnal_card.xml
+++ b/app/src/main/res/layout/hymnal_card.xml
@@ -22,7 +22,6 @@
     android:layout_height="160dp"
     android:layout_margin="6dp"
     android:stateListAnimator="@animator/lift_on_touch"
-    app:cardBackgroundColor="@color/accent"
     app:cardCornerRadius="6dp"
     app:cardElevation="0dp">
 
@@ -40,11 +39,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/scrim"
+            android:background="@color/scrim_book"
             android:orientation="vertical"
-            android:paddingStart="@dimen/spacing_normal"
             android:paddingTop="@dimen/spacing_medium"
-            android:paddingEnd="@dimen/spacing_normal"
             android:paddingBottom="@dimen/spacing_medium">
 
             <TextView
@@ -54,11 +51,18 @@
                 android:layout_weight="1"
                 android:breakStrategy="simple"
                 android:ellipsize="end"
+                android:fontFamily="@font/garamond"
                 android:gravity="center"
                 android:hyphenationFrequency="none"
+                android:includeFontPadding="true"
+                android:lineSpacingExtra="6sp"
+                android:paddingStart="@dimen/spacing_normal"
+                android:paddingEnd="@dimen/spacing_normal"
                 android:paddingBottom="@dimen/spacing_micro"
                 android:textAppearance="@style/Hymnal.TextAppearance.Title"
                 android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold"
                 tools:text="Christ In Song" />
 
             <TextView
@@ -66,13 +70,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_marginStart="@dimen/spacing_normal"
+                android:layout_marginEnd="@dimen/spacing_normal"
                 android:background="@drawable/bg_on_surface"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxLines="1"
                 android:textAppearance="@style/Hymnal.TextAppearance.Body"
                 android:textSize="@dimen/text_size_xsmall"
-                tools:text="Ndebele / Isuzulu" />
+                tools:text="Ndebele" />
 
         </LinearLayout>
     </FrameLayout>
