--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,8 @@
 
     <color name="scrim">#99323232</color>
 
+    <color name="scrim_book">#54000000</color>
+
     <color name="white">#fff</color>
     <color name="color_on_secondary">@color/white</color>
 
