--- a/app/src/main/res/drawable/ic_keyboard_voice.xml
+++ b/app/src/main/res/drawable/ic_keyboard_voice.xml
@@ -21,5 +21,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="@color/secondary"
-      android:pathData="M4,18h16c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L4,16c-0.55,0 -1,0.45 -1,1s0.45,1 1,1zM4,13h16c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L4,11c-0.55,0 -1,0.45 -1,1s0.45,1 1,1zM3,7c0,0.55 0.45,1 1,1h16c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L4,6c-0.55,0 -1,0.45 -1,1z"/>
+      android:pathData="M12,15c1.66,0 2.99,-1.34 2.99,-3L15,6c0,-1.66 -1.34,-3 -3,-3S9,4.34 9,6v6c0,1.66 1.34,3 3,3zM18.08,12c-0.42,0 -0.77,0.3 -0.83,0.71 -0.37,2.61 -2.72,4.39 -5.25,4.39s-4.88,-1.77 -5.25,-4.39c-0.06,-0.41 -0.42,-0.71 -0.83,-0.71 -0.52,0 -0.92,0.46 -0.85,0.97 0.46,2.97 2.96,5.3 5.93,5.75L11,21c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-2.28c2.96,-0.43 5.47,-2.78 5.93,-5.75 0.07,-0.51 -0.33,-0.97 -0.85,-0.97z"/>
 </vector>
