--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,28 @@
 
 <resources>
 
+    <style name="Hymnal.AppBar" parent="ThemeOverlay.MaterialComponents.ActionBar">
+        <item name="colorPrimary">@color/window_background</item>
+        <item name="colorControlNormal">@color/primary</item>
+    </style>
+
+    <style name="Hymnal.Toolbar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorControlNormal">@color/primary</item>
+        <item name="colorAccent">@color/primary</item>
+        <item name="searchViewStyle">@style/searchStyle</item>
+    </style>
+
+    <style name="Hymnal.Toolbar.White" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorAccent">@color/white</item>
+        <item name="searchViewStyle">@style/searchStyle</item>
+    </style>
+
+    <style name="searchStyle" parent="Widget.AppCompat.SearchView.ActionBar">
+        <item name="queryHint">@string/search_hint</item>
+        <item name="searchIcon">@null</item>
+    </style>
+
     <style name="AlertDialog.ButtonBar" parent="@style/Widget.AppCompat.ButtonBar.AlertDialog">
         <item name="android:paddingBottom">@dimen/spacing_normal</item>
         <item name="android:paddingTop">@dimen/spacing_normal</item>
